--- a/Online Purchasing of home decore/home3.html
+++ b/Online Purchasing of home decore/home3.html
@@ -1,6 +1,6 @@
 <html>
 <head>	
-<title> Welcome to Interior Designing </title>
+<title> Welcome to Interior& Exterior Designing </title>
 <style>
 p{color:white; text-align:center; font-size:20;}
 body{text-align: center;}
